--- a/project-templates/mesos/0/project.yml
+++ b/project-templates/mesos/0/project.yml
@@ -2,7 +2,7 @@ name: Mesos
 description: Default Mesos template
 stacks:
   - name: mesos
-    templateId: 'community:infra*mesos'
+    templateId: 'tmpl-community:infra*mesos'
   - name: network-services
     templateId: 'library:infra*network-services'
   - name: ipsec
